--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,19 @@
         android:theme="@style/Theme.Portfolio_android"
         tools:targetApi="31">
         <activity
-            android:name=".activity_titulo_livro"
+            android:name=".listaExemplares"
             android:exported="false" />
         <activity
-            android:name=".activity_biblioteca"
+            android:name=".meusLivros"
+            android:exported="false" />
+        <activity
+            android:name=".bibliotecaLivros"
+            android:exported="false" />
+        <activity
+            android:name=".cadastre"
+            android:exported="false" />
+        <activity
+            android:name=".activity_titulo_livro"
             android:exported="false" />
         <activity
             android:name=".suporte"
